syntax = "proto2";
package publish;


import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

// For tests
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;

// HEP represents HEP packet
message HEP {
	required uint32 Version = 1 [(gogoproto.nullable) = false];
	required uint32 Protocol = 2 [(gogoproto.nullable) = false];
	required string SrcIP = 3 [(gogoproto.nullable) = false];
	required string DstIP = 4 [(gogoproto.nullable) = false];
	required uint32 SrcPort = 5 [(gogoproto.nullable) = false];
	required uint32 DstPort = 6 [(gogoproto.nullable) = false];
	required uint32 Tsec = 7 [(gogoproto.nullable) = false];
	required uint32 Tmsec = 8 [(gogoproto.nullable) = false];
	required uint32 ProtoType = 9 [(gogoproto.nullable) = false];
	required uint32 NodeID = 10 [(gogoproto.nullable) = false];
	required string NodePW = 11 [(gogoproto.nullable) = false];
	required string Payload = 12 [(gogoproto.nullable) = false];
	required string CID = 13 [(gogoproto.nullable) = false];
	required uint32 Vlan = 14 [(gogoproto.nullable) = false];
}
